.metadata/.plugins/org.eclipse.cdt.ui/can_tja1059.build.log
15:58:21 **** Incremental Build of configuration Debug for project can_tja1059 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:121:13: error: 'CAN_HandleTypeDef' {aka 'struct __CAN_HandleTypeDef'} has no member named 'pTxMsg'
  121 |         hcan.pTxMsg->StdId=0x456; //id de phan biet cac node CAN, moi node ta thiet lap 1 id khac nhau (su dung cho vd2)
      |             ^
../Core/Src/main.c:122:13: error: 'CAN_HandleTypeDef' {aka 'struct __CAN_HandleTypeDef'} has no member named 'pTxMsg'
  122 |         hcan.pTxMsg->RTR=CAN_RTR_DATA; //Remote transmission request = Data frame
      |             ^
../Core/Src/main.c:123:13: error: 'CAN_HandleTypeDef' {aka 'struct __CAN_HandleTypeDef'} has no member named 'pTxMsg'
  123 |         hcan.pTxMsg->IDE=CAN_ID_STD;     //Standard Id (11 bits for the identifier)
      |             ^
../Core/Src/main.c:124:13: error: 'CAN_HandleTypeDef' {aka 'struct __CAN_HandleTypeDef'} has no member named 'pTxMsg'
  124 |         hcan.pTxMsg->DLC=1;
      |             ^
../Core/Src/main.c:125:13: error: 'CAN_HandleTypeDef' {aka 'struct __CAN_HandleTypeDef'} has no member named 'HAL_CAN_Receive_IT'
  125 |         hcan.
      |             ^
../Core/Src/main.c:127:35: error: 'CAN_FIFO0' undeclared (first use in this function); did you mean 'CAN_RX_FIFO0'?
  127 |         HAL_CAN_Receive_IT(&hcan, CAN_FIFO0); //phuc vu ngat CAN Rx
      |                                   ^~~~~~~~~
      |                                   CAN_RX_FIFO0
../Core/Src/main.c:127:35: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

15:58:22 Build Failed. 7 errors, 0 warnings. (took 509ms)

